# cliciv

./: Cargo.toml  run.sh  state  state.tmp
src/: main copy.rs  main.rs
src/game/: actions.rs  buildings.rs  citizens.rs  errors.rs  jobs.rs  land.rs  mod.rs  resources.rs  state.rs  utils.rs
