[package]
name = "cliciv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
atty = "0.2.14"
rand_chacha = "0.3.1"
byteorder = "1.4.3"
backtrace = "0.3"
